fix body overflow

--- a/packages/ui/src/common/misc/SideNavigation/SideNavigation.module.scss
+++ b/packages/ui/src/common/misc/SideNavigation/SideNavigation.module.scss
@@ -10,13 +10,18 @@
   align-items: center;
   border-right: 1px solid $gray-80;
 
+  .linksWrapper {
+    display: flex;
+    flex-direction: column;
+    row-gap: $spacing-base;
+  }
+
   .inactiveLink {
     background: $gray-100;
     opacity: 0.5;
     width: 50px;
     height: 50px;
     border-radius: 15px;
-    margin-bottom: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
